--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -82,6 +82,7 @@
 @import blocks/characteristics-second
 @import blocks/unit
 @import blocks/quantity
+@import blocks/quantity-second
 @import blocks/delivery-date
 @import blocks/delivery
 @import blocks/reviews-second
@@ -90,3 +91,6 @@
 @import blocks/line
 @import blocks/catalog-element
 @import blocks/navigation
+@import blocks/map
+@import blocks/selection
+@import blocks/cart
