--- a/sortmet/sass/blocks/btn.sass
+++ b/sortmet/sass/blocks/btn.sass
@@ -13,6 +13,30 @@
         padding: 20px 30px
         font-size: 18px
         line-height: 21px
+    &-fouth
+        background: #1BC100
+        color: #FFFFFF
+    &-fifth
+        background: #E7F2FF
+        color: #0077FF
+    &-remove
+        background: #F7F7F9
+        display: flex
+        align-items: center
+        justify-content: center
+        color: #7F8A9B    
+        span
+            position: relative
+            padding-left: 34px
+            &::before
+                content: ''
+                width: 24px
+                height: 24px
+                background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_656_7851)'%3E%3Cpath d='M14 11V17' stroke='%237F8A9B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M10 11V17' stroke='%237F8A9B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M6 7V19C6 20.1046 6.89543 21 8 21H16C17.1046 21 18 20.1046 18 19V7' stroke='%237F8A9B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M4 7H20' stroke='%237F8A9B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7 7L9 3H15L17 7' stroke='%237F8A9B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_656_7851'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A")
+                position: absolute
+                top: 50%
+                left: 0
+                transform: translateY(-50%)
     &-buy
         background: #0077FF
         border-radius: 7px
