--- a/sortmet/sass/blocks/catalog-element.sass
+++ b/sortmet/sass/blocks/catalog-element.sass
@@ -137,7 +137,7 @@
             padding-left: 34px
             font-size: 16px
             line-height: 18px
-            color: #626D7D
+            // color: #626D7D
             position: relative
             &::before
                 content: ''
@@ -212,6 +212,18 @@
             span
                 &:first-child
                     margin-bottom: 5px
+                    position: relative
+                    padding-right: 25px
+                    width: fit-content
+                    &::before
+                        content: ''
+                        width: 20px
+                        height: 20px
+                        background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_865_21466)'%3E%3Cpath d='M8.33333 14.1667L12.5 10L8.33333 5.83335' stroke='%230077FF' stroke-width='1.66667' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_865_21466'%3E%3Crect width='20' height='20' fill='white' transform='translate(0 20) rotate(-90)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A")
+                        position: absolute
+                        top: 50%
+                        right: 0
+                        transform: translateY(-50%)
                 &:last-child
                     font-size: 14px
                     line-height: 16px
