--- a/sortmet/sass/blocks/selection.sass
+++ b/sortmet/sass/blocks/selection.sass
@@ -1,41 +1,25 @@
-.reviews-second
-    margin: 60px 0 50px
-    @media (max-width: 1023px)
-        margin: 30px 0 10px
-    &__item
-        padding-bottom: 30px
-        margin-bottom: 30px
-        border-bottom: 1px solid #DEE1E5
+.selection
+    margin: 70px 0
+    @media (max-width: 767px)
+        margin: 40px 0 
+    &__list
+        margin: 0 0 40px 
+        column-count: 4
+        gap: 20px
+        word-break: break-word
         @media (max-width: 767px)
-            padding-bottom: 20px
-            margin-bottom: 20px    
-        &:last-child
-            border-bottom: 0
-        &-row
-            display: flex
+            column-count: 3
             margin-bottom: 15px
-            align-items: center
-            flex-wrap: wrap
-        &-name
-            margin-right: 20px
-            font-weight: 600
-            font-size: 18px
-            line-height: 21px
-            @media (max-width: 767px)
-                width: 100%
-                margin-bottom: 10px
-                font-size: 16px
-                line-height: 18px
-        &-rating
-            margin-right: 20px
-        &-date
-            font-size: 14px
-            line-height: 16px
-            color: #7F8A9B
-        &-text
-            @media (max-width: 767px)
-                font-size: 14px
-                line-height: 21px
+        @media (max-width: 465px)
+            column-count: 2
+            max-height: 223px
+            overflow: hidden
+    &__item
+        display: block
+        margin-bottom: 20px
+        font-size: 16px
+        line-height: 18px
+        color: #626D7D
     &__show-more
         display: flex
         justify-content: center
