--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -71,6 +71,8 @@
 @import blocks/filter
 @import blocks/checkbox
 @import blocks/radio
+@import blocks/input
+@import blocks/textarea
 @import blocks/prompt
 @import blocks/range
 @import blocks/sort
@@ -93,4 +95,8 @@
 @import blocks/navigation
 @import blocks/map
 @import blocks/selection
+@import blocks/cart-heading
 @import blocks/cart
+@import blocks/order
+@import blocks/order-success
+@import blocks/favorites
