--- a/sortmet/sass/blocks/quantity-second.sass
+++ b/sortmet/sass/blocks/quantity-second.sass
@@ -6,6 +6,8 @@
     border: 1px solid #DEE1E5
     border-radius: 7px
     box-sizing: border-box
+    @media (max-width: 767px)
+        padding: 8px 5px
     &__minus
         width: 24px
         height: 24px
@@ -18,6 +20,8 @@
         display: flex
         align-items: flex-end
         padding: 0 14px
+        @media (max-width: 767px)
+            padding: 0 9px
         span
             // display: block
             &:first-child
@@ -25,6 +29,9 @@
                 font-size: 18px
                 line-height: 21px
                 margin-right: 5px
+                @media (max-width: 767px)
+                    font-size: 16px
+                    line-height: 18px
             &:last-child
                 font-size: 14px
                 line-height: 16px
