--- a/sortmet/sass/blocks/radio.sass
+++ b/sortmet/sass/blocks/radio.sass
@@ -1,7 +1,6 @@
 .radio
     cursor: pointer
     margin-bottom: 15px
-
     &__name
         color: #626D7D
         padding-left: 39px
@@ -32,7 +31,7 @@
     &__input
         display: none
         &:checked
-            & + .filter__block-item-name
+            & + .radio__name
                 &::before
                     // background: #0077FF
                     border-color: #0077FF
