--- a/sortmet/sass/main/base.sass
+++ b/sortmet/sass/main/base.sass
@@ -48,6 +48,16 @@ input[type='text']
     box-sizing: border-box
     &::placeholder
         color: #7F8A9B
+
+textarea
+    width: 100%
+    height: 216px
+    padding: 14px 15px 16px
+    border: 1px solid #DEE1E5
+    border-radius: 7px
+    box-sizing: border-box
+    &::placeholder
+        color: #7F8A9B
 .wrapper
     max-width: 1235px
     width: 100%
