--- a/sortmet/sass/blocks/characteristics.sass
+++ b/sortmet/sass/blocks/characteristics.sass
@@ -2,6 +2,8 @@
     &__item
         display: flex
         margin-bottom: 10px
+        @media (max-width: 767px)
+            margin-bottom: 5px
         &-caption
             width: 120px
             margin-right: 20px
