--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -100,3 +100,5 @@
 @import blocks/order
 @import blocks/order-success
 @import blocks/favorites
+@import blocks/compare
+@import blocks/compare-item
