--- a/sortmet/sass/blocks/heading.sass
+++ b/sortmet/sass/blocks/heading.sass
@@ -7,11 +7,15 @@
     &_with-content
         display: flex
         justify-content: space-between
+        @media ( max-width: 767px )
+            gap: 15px
+            flex-wrap: wrap 
     &__content
         display: flex
         gap: 30px
         line-height: 18px
         color: #7F8A9B
+      
     &__print,
     &__share,
     &__clear
@@ -40,3 +44,10 @@
     &__clear
         &::before
             background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1090_17336)'%3E%3Cpath d='M11.667 9.16667V14.1667' stroke='%237F8A9B' stroke-width='1.66667' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M8.33301 9.16667V14.1667' stroke='%237F8A9B' stroke-width='1.66667' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M5 5.83333V15.8333C5 16.7538 5.74619 17.5 6.66667 17.5H13.3333C14.2538 17.5 15 16.7538 15 15.8333V5.83333' stroke='%237F8A9B' stroke-width='1.66667' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M3.33301 5.83333H16.6663' stroke='%237F8A9B' stroke-width='1.66667' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M5.83301 5.83333L7.49967 2.5H12.4997L14.1663 5.83333' stroke='%237F8A9B' stroke-width='1.66667' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1090_17336'%3E%3Crect width='20' height='20' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A")
+        &_second
+            @media ( min-width: 767px )
+                background: #F7F7F9
+                border-radius: 7px
+                padding: 13px 15px 13px 49px
+                &::before
+                    left: 15px
