--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -102,3 +102,5 @@
 @import blocks/favorites
 @import blocks/compare
 @import blocks/compare-item
+@import blocks/directions
+@import blocks/history
