--- a/sortmet/sass/blocks/compare.sass
+++ b/sortmet/sass/blocks/compare.sass
@@ -1,5 +1,7 @@
 .compare
     margin-bottom: 70px
+    @media ( max-width: 767px )
+        margin-bottom: 30px
     &__tabs
         margin-bottom: 37px
         @media ( max-width: 1023px )
@@ -25,3 +27,5 @@
             display: none
             @media ( max-width: 1023px )
                 display: block
+                font-size: 18px
+                line-height: 21px
