--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -104,3 +104,7 @@
 @import blocks/compare-item
 @import blocks/directions
 @import blocks/history
+@import blocks/employees
+@import blocks/mission
+@import blocks/certificates
+@import blocks/cta
