--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -108,3 +108,12 @@
 @import blocks/mission
 @import blocks/certificates
 @import blocks/cta
+@import blocks/vacancies
+@import blocks/reviews-video
+@import blocks/letters
+@import blocks/contacts-cards
+@import blocks/route
+@import blocks/maps
+@import blocks/contacts-form
+@import blocks/site-info
+@import blocks/requisites
