--- a/sortmet/sass/blocks/heading.sass
+++ b/sortmet/sass/blocks/heading.sass
@@ -18,7 +18,8 @@
       
     &__print,
     &__share,
-    &__clear
+    &__clear,
+    &__download
         padding-left: 34px
         position: relative
         @media (max-width: 1023px)
@@ -51,3 +52,16 @@
                 padding: 13px 15px 13px 49px
                 &::before
                     left: 15px
+    &__download
+        color: #0C67BD
+        @media ( max-width: 767px )
+            padding-left: 30px
+            font-size: 14px
+            line-height: 16px
+        &::before
+            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 12L12 17M12 17L17 12M12 17L12 4' stroke='%230077FF' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M6 20H18' stroke='%230077FF' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A")
+            background-size: contain
+            @media ( max-width: 767px )
+                width: 20px
+                height: 20px
+    
