--- a/sortmet/sass/blocks/btn.sass
+++ b/sortmet/sass/blocks/btn.sass
@@ -5,6 +5,15 @@
     // font-weight: 600
     border-radius: 8px
     cursor: pointer
+    border: none
+    &-big
+        font-size: 18px
+        line-height: 21px
+        padding: 20px 30px
+        @media ( max-width: 767px )
+            padding: 14px 20px
+            font-size: 16px
+            line-height: 18px
     &-second
         background: #DEE9FF
         color: #0077FF
