--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -117,3 +117,15 @@
 @import blocks/contacts-form
 @import blocks/site-info
 @import blocks/requisites
+@import blocks/policy
+@import blocks/price-list
+@import blocks/list
+@import blocks/actions-banners
+@import blocks/certificates-list
+@import blocks/faq-messenger
+@import blocks/faq-form
+@import blocks/news-page
+@import blocks/news-detail
+@import blocks/video
+@import blocks/rate
+@import blocks/share
