--- a/sortmet/sass/blocks/pagination.sass
+++ b/sortmet/sass/blocks/pagination.sass
@@ -1,5 +1,9 @@
 .pagination
     margin: 60px 0 0
+    &_center
+        margin-left: auto
+        margin-right: auto
+        width: fit-content
     @media (max-width: 1023px)
         margin-top: 10px
     &__item
