--- a/sortmet/sass/blocks/select.sass
+++ b/sortmet/sass/blocks/select.sass
@@ -1,6 +1,11 @@
 .select
     position: relative
-    margin-bottom: 15px
+    margin-bottom: 15px        
+    &__name
+        font-size: 12px
+        line-height: 14px
+        color: #ADB3BE
+        margin-bottom: 2px
     &__value
         padding: 14px 36px 16px 15px
         border: 1px solid #DEE1E5
@@ -18,6 +23,9 @@
             top: 50%
             right: 15px
             transform: translateY(-50%)
+        &_with-name
+            padding: 12px 36px 14px 15px
+            height: 60px
     &__list
         display: none
         padding: 14px 0 16px 0
@@ -35,4 +43,5 @@
         cursor: pointer
         &:hover
             background: #F7F7F9
+    
     
