--- a/sortmet/sass/main/base.sass
+++ b/sortmet/sass/main/base.sass
@@ -54,6 +54,15 @@ h1
         font-size: 22px
         line-height: 130%
 
+h2       
+    font-weight: 700
+    font-size: 22px
+    line-height: 25px
+    margin-bottom: 20px
+    @media (max-width: 767px)
+        font-size: 18px
+        line-height: 21px
+        margin-bottom: 10px
 input[type='text']
     width: 100%
     height: 48px
