--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -129,3 +129,7 @@
 @import blocks/video
 @import blocks/rate
 @import blocks/share
+@import blocks/page-404
+@import blocks/warranty
+@import blocks/services-page
+@import blocks/services-detail
