--- a/sortmet/sass/main/base.sass
+++ b/sortmet/sass/main/base.sass
@@ -99,6 +99,9 @@ textarea
 .gray
     // padding-top: 60px
     position: relative
+    &_pb 
+        padding-bottom: 70px
+        margin-bottom: -70px
     @media (min-width: 1024px) 
         padding-top: 60px
         &::before
