--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -2,6 +2,7 @@
 @import main/fonts
 @import main/vars
 @import main/base
+@import blocks/popup
 @import blocks/heading
 @import blocks/title
 @import blocks/btn
