--- a/sortmet/sass/blocks/about-us.sass
+++ b/sortmet/sass/blocks/about-us.sass
@@ -4,6 +4,8 @@
     @media (max-width: 767px)
         padding-bottom: 25px
         margin: 40px 0 0
+    &_mt-0
+        margin-top: 0
     &__video
         margin: 30px 0
         img,
