--- a/sortmet/sass/blocks/contacts-cards.sass
+++ b/sortmet/sass/blocks/contacts-cards.sass
@@ -2,7 +2,7 @@
     display: flex
     flex-wrap: wrap
     gap: 20px
-    margin: 40px 0
+    margin: 30px 0 40px
     @media ( max-width: 767px )
         gap: 15px
     &__item
