--- a/sortmet/sass/blocks/payment.sass
+++ b/sortmet/sass/blocks/payment.sass
@@ -18,6 +18,10 @@
             width: calc( 50% - 10px )
             margin: 0 5px 10px
             padding: 19px 15px 15px
+        @media (max-width: 767px)
+            width: calc(100% - 10px)
+            &:last-child
+                margin-bottom: 0
         &:hover
             background: #0077FF
             box-shadow: 0px 3px 20px -9px rgba(0, 0, 0, 0.43), 0px 16px 26px rgba(0, 119, 255, 0.26), 0px 16px 5px -10px rgba(0, 79, 170, 0.14)
