--- a/sortmet/sass/blocks/reviews.sass
+++ b/sortmet/sass/blocks/reviews.sass
@@ -3,6 +3,8 @@
     position: relative
     @media (max-width: 767px)
         margin: 40px 0 
+    &_mt-0
+        margin-top: 0
     &__list
         position: relative
         &-flex
