--- a/sortmet/sass/blocks/seo.sass
+++ b/sortmet/sass/blocks/seo.sass
@@ -3,6 +3,8 @@
     line-height: 160%
     @media (max-width: 767px)
         margin: 40px 0
+    &_mt-0
+        margin-top: 0
     &__content
         max-height: 176px
         overflow: hidden
@@ -19,6 +21,7 @@
             top: 0
             left: 0
             background: linear-gradient(180deg, rgba(26, 30, 36, 0) 0%, #ffffff 100%)
+            // background: linear-gradient(0deg, rgba(247, 247, 249, 1) 0%, rgba(247, 247, 249, 0) 100%)
             transition: .3s background ease
         &_open
             max-height: 100%
