--- a/akticom/sass/blocks/second-menu.sass
+++ b/akticom/sass/blocks/second-menu.sass
@@ -2,5 +2,7 @@
     display: flex
     flex-wrap: wrap
     gap: 60px
+    @media (max-width: 1279px)
+        gap: 30px
     &__item
         font-size: 20px
