--- a/akticom/sass/blocks/footer.sass
+++ b/akticom/sass/blocks/footer.sass
@@ -1,17 +1,33 @@
 .footer
     margin-top: 110px
+    margin-bottom: 87px
+    @media (max-width: 1023px)
+        margin-bottom: 30px
+        margin-top: 30px
     &__inner
         padding-top: 50px
         border-top: 1px solid #D9D9D9
         display: flex
         justify-content: space-between
+        gap: 15px
+        @media (max-width: 1023px)
+            flex-direction: column
+            padding-top: 30px
     &__info
     &__logo
         margin-bottom: 50px
+        @media (max-width: 1023px)
+            margin-bottom: 15px
     &__copyright
         font-size: 14px
         letter-spacing: 0.1px
     &__menu
+        @media (max-width: 1023px)
+            flex-direction: column
+            gap: 15px
     &__phones
         display: flex
         gap: 30px
+        @media (max-width: 1279px)
+            flex-direction: column
+            gap: 10px
