--- a/akticom/sass/blocks/header.sass
+++ b/akticom/sass/blocks/header.sass
@@ -3,4 +3,6 @@
     gap: 30px
     justify-content: space-between
     align-items: flex-start
-    margin-bottom: 114px
+    margin: 40px 0 114px
+    @media (max-width: 1023px)
+        margin: 30px 0 40px   
