--- a/akticom/sass/blocks/projects.sass
+++ b/akticom/sass/blocks/projects.sass
@@ -1,5 +1,7 @@
 .projects
     margin: 100px 0 180px
+    @media (max-width: 1023px)
+        margin: 30px 0
     &__top
         display: flex
         justify-content: space-between
@@ -8,42 +10,87 @@
         padding-bottom: 40px
         border-bottom: 1px solid #fff
         margin-bottom: 70px
+        @media (max-width: 1023px)
+            padding-bottom: 30px
+            margin-bottom: 30px
+        @media (max-width: 767px)
+            flex-direction: column
+            // padding-bottom: 15px
+            // margin-bottom: 15px
+
     &__title 
     &__tags 
+        justify-content: flex-end
+        @media (max-width: 767px)
+            justify-content: flex-start
     &__list
     &__item
         display: flex
         gap: 36px
         padding: 60px 0
         border-bottom: 1px solid #fff
+        @media (max-width: 1023px)
+            padding: 30px 0
+        @media (max-width: 767px)
+            // padding: 15px 0
         &:first-child
             padding-top: 0
         &:last-child
             border-bottom: none
+            padding-bottom: 0
         &-info
             position: relative
             max-width: 585px
             width: 100%
+            z-index: 1
+            @media (max-width: 1367px)
+                width: 50%
+            @media (max-width: 767px)
+                width: 100%
+                max-width: 100%
             &::before
                 content: ""
                 width: 228px
                 height: 228px
                 background-image: url("data:image/svg+xml,%3Csvg width='228' height='228' viewBox='0 0 228 228' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='114' width='114' height='114' fill='%23151515'/%3E%3Cpath d='M228 114V228H114L228 114Z' fill='%23151515'/%3E%3Crect y='114' width='114' height='114' fill='%23151515'/%3E%3C/svg%3E%0A")
+                background-size: contain
                 position: absolute
                 bottom: 0
                 right: 0
+                z-index: -1
+                @media (max-width: 1023px)
+                    width: 114px
+                    height: 114px
         &-title
             font-family: 'Manrope', sans-serif
             font-size: 36px
             font-weight: 600
             line-height: 110%
             margin-bottom: 30px
+            z-index: 1
+            @media (max-width: 1023px)
+                font-size: 28px
+                margin-bottom: 15px
         &-text
             font-size: 20px
             font-weight: 400
             line-height: 140%
             margin-bottom: 30px
             position: relative
+            z-index: 1
+            @media (max-width: 767px)
+                margin-bottom: 15px
+        &-button
+            z-index: 1
+            display: block
         &-image
             width: calc(100% - 615px) 
-            
+            @media (max-width: 1367px)
+                width: 50%
+            @media (max-width: 767px)
+                display: none
+            &--mobile
+                display: none
+                width: 100%
+                @media (max-width: 767px)
+                    display: block
